book: update cs
Updated via the `update-book.yml` GitHub workflow.

--- a/external/book/content/book/cs/v2/Customizing-Git-An-Example-Git-Enforced-Policy.html
+++ b/external/book/content/book/cs/v2/Customizing-Git-An-Example-Git-Enforced-Policy.html
@@ -16,6 +16,9 @@ book:
     previous: book/cs/v2/Customizing-Git-Git-Hooks
     next: book/cs/v2/Customizing-Git-Shrnutí
 title: Git - An Example Git-Enforced Policy
+aliases:
+- "/book/cs/Individuální-přizpůsobení-systému-Git-Příklad-standardů-kontrolovaných-systémem-Git.html"
+- "/book/cs/v1/Individuální-přizpůsobení-systému-Git-Příklad-standardů-kontrolovaných-systémem-Git.html"
 ---
 <h2 id="_an_example_git_enforced_policy">An Example Git-Enforced Policy</h2>
 <div class="paragraph">
