--- a/external/book/content/book/cs/v2/Customizing-Git-Atributy-Git.html
+++ b/external/book/content/book/cs/v2/Customizing-Git-Atributy-Git.html
@@ -16,6 +16,9 @@ book:
     previous: book/cs/v2/Customizing-Git-Git-Configuration
     next: book/cs/v2/Customizing-Git-Git-Hooks
 title: Git - Atributy Git
+aliases:
+- "/book/cs/Individuální-přizpůsobení-systému-Git-Atributy-Git.html"
+- "/book/cs/v1/Individuální-přizpůsobení-systému-Git-Atributy-Git.html"
 ---
 <h2 id="_atributy_git">Atributy Git</h2>
 <div class="paragraph">
