--- a/external/book/content/book/cs/v2/Customizing-Git-Git-Configuration.html
+++ b/external/book/content/book/cs/v2/Customizing-Git-Git-Configuration.html
@@ -16,6 +16,11 @@ book:
     previous: book/cs/v2/Git-Tools-Shrnutí
     next: book/cs/v2/Customizing-Git-Atributy-Git
 title: Git - Git Configuration
+aliases:
+- "/book/cs/Individuální-přizpůsobení-systému-Git.html"
+- "/book/cs/v1/Individuální-přizpůsobení-systému-Git.html"
+- "/book/cs/Individuální-přizpůsobení-systému-Git-Konfigurace-systému-Git.html"
+- "/book/cs/v1/Individuální-přizpůsobení-systému-Git-Konfigurace-systému-Git.html"
 ---
 <p>So far, we’ve covered the basics of how Git works and how to use it, and we’ve introduced a number of tools that Git provides to help you use it easily and efficiently.
 In this chapter, we’ll see how you can make Git operate in a more customized fashion, by introducing several important configuration settings and the hooks system.
