--- a/external/book/content/book/cs/v2/Customizing-Git-Git-Hooks.html
+++ b/external/book/content/book/cs/v2/Customizing-Git-Git-Hooks.html
@@ -16,6 +16,9 @@ book:
     previous: book/cs/v2/Customizing-Git-Atributy-Git
     next: book/cs/v2/Customizing-Git-An-Example-Git-Enforced-Policy
 title: Git - Git Hooks
+aliases:
+- "/book/cs/Individuální-přizpůsobení-systému-Git-Zásuvné-moduly-Git.html"
+- "/book/cs/v1/Individuální-přizpůsobení-systému-Git-Zásuvné-moduly-Git.html"
 ---
 <h2 id="_git_hooks">Git Hooks</h2>
 <div class="paragraph">
