--- a/external/book/content/book/cs/v2/Customizing-Git-Shrnutí.html
+++ b/external/book/content/book/cs/v2/Customizing-Git-Shrnutí.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Git-a-ostatní-systémy-Git-as-a-Client
 title: Git - Shrnutí
 url: "/book/cs/v2/Customizing-Git-Shrnutí.html"
+aliases:
+- "/book/cs/Individuální-přizpůsobení-systému-Git-Shrnutí.html"
+- "/book/cs/v1/Individuální-přizpůsobení-systému-Git-Shrnutí.html"
 ---
 <h2 id="_shrnutí_10">Shrnutí</h2>
 <div class="paragraph">
