--- a/external/book/content/book/cs/v2/Distribuovaný-Git-Distribuované-pracovní-postupy.html
+++ b/external/book/content/book/cs/v2/Distribuovaný-Git-Distribuované-pracovní-postupy.html
@@ -17,6 +17,11 @@ book:
     next: book/cs/v2/Distribuovaný-Git-Přispívání-do-projektu
 title: Git - Distribuované pracovní postupy
 url: "/book/cs/v2/Distribuovaný-Git-Distribuované-pracovní-postupy.html"
+aliases:
+- "/book/cs/Distribuovaný-charakter-systému-Git.html"
+- "/book/cs/v1/Distribuovaný-charakter-systému-Git.html"
+- "/book/cs/Distribuovaný-charakter-systému-Git-Distribuované-pracovní-postupy.html"
+- "/book/cs/v1/Distribuovaný-charakter-systému-Git-Distribuované-pracovní-postupy.html"
 ---
 <p>
 Máte vytvořen vzdálený gitový repozitář, který je nastaven tak, aby mohli všichni vývojáři sdílet svůj zdrojový kód, a znáte základní příkazy Gitu pro práci v lokálním prostředí. Nastal čas, abychom se podívali na využití některých distribuovaných pracovních postupů, které vám Git nabízí.</p><p>V této kapitole uvidíte, jak se v distribuovaném prostředí s Gitem pracuje v roli přispěvatele a v roli integrátora.
