--- a/external/book/content/book/cs/v2/Distribuovaný-Git-Přispívání-do-projektu.html
+++ b/external/book/content/book/cs/v2/Distribuovaný-Git-Přispívání-do-projektu.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Distribuovaný-Git-Správa-projektu
 title: Git - Přispívání do projektu
 url: "/book/cs/v2/Distribuovaný-Git-Přispívání-do-projektu.html"
+aliases:
+- "/book/cs/Distribuovaný-charakter-systému-Git-Přispívání-do-projektu.html"
+- "/book/cs/v1/Distribuovaný-charakter-systému-Git-Přispívání-do-projektu.html"
 ---
 <h2 id="_contributing_project">Přispívání do projektu</h2>
 <div class="paragraph">
