--- a/external/book/content/book/cs/v2/Distribuovaný-Git-Shrnutí.html
+++ b/external/book/content/book/cs/v2/Distribuovaný-Git-Shrnutí.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/GitHub-Zřízení-účtu-a-úprava-konfigurace
 title: Git - Shrnutí
 url: "/book/cs/v2/Distribuovaný-Git-Shrnutí.html"
+aliases:
+- "/book/cs/Distribuovaný-charakter-systému-Git-Shrnutí.html"
+- "/book/cs/v1/Distribuovaný-charakter-systému-Git-Shrnutí.html"
 ---
 <h2 id="_shrnutí_6">Shrnutí</h2>
 <div class="paragraph">
