--- a/external/book/content/book/cs/v2/Distribuovaný-Git-Správa-projektu.html
+++ b/external/book/content/book/cs/v2/Distribuovaný-Git-Správa-projektu.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Distribuovaný-Git-Shrnutí
 title: Git - Správa projektu
 url: "/book/cs/v2/Distribuovaný-Git-Správa-projektu.html"
+aliases:
+- "/book/cs/Distribuovaný-charakter-systému-Git-Správa-projektu.html"
+- "/book/cs/v1/Distribuovaný-charakter-systému-Git-Správa-projektu.html"
 ---
 <h2 id="_správa_projektu">Správa projektu</h2>
 <div class="paragraph">
