--- a/external/book/content/book/cs/v2/Git-Internals-Balíčkové-soubory.html
+++ b/external/book/content/book/cs/v2/Git-Internals-Balíčkové-soubory.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Git-Internals-The-Refspec
 title: Git - Balíčkové soubory
 url: "/book/cs/v2/Git-Internals-Balíčkové-soubory.html"
+aliases:
+- "/book/cs/Git-pod-pokličkou-Balíčkové-soubory.html"
+- "/book/cs/v1/Git-pod-pokličkou-Balíčkové-soubory.html"
 ---
 <h2 id="_balíčkové_soubory">Balíčkové soubory</h2>
 <div class="paragraph">
