--- a/external/book/content/book/cs/v2/Git-Internals-Git-References.html
+++ b/external/book/content/book/cs/v2/Git-Internals-Git-References.html
@@ -16,6 +16,9 @@ book:
     previous: book/cs/v2/Git-Internals-Git-Objects
     next: book/cs/v2/Git-Internals-Balíčkové-soubory
 title: Git - Git References
+aliases:
+- "/book/cs/Git-pod-pokličkou-Reference-Git.html"
+- "/book/cs/v1/Git-pod-pokličkou-Reference-Git.html"
 ---
 <h2 id="_git_refs">Git References</h2>
 <div class="paragraph">
