--- a/external/book/content/book/cs/v2/Git-Internals-Plumbing-and-Porcelain.html
+++ b/external/book/content/book/cs/v2/Git-Internals-Plumbing-and-Porcelain.html
@@ -16,6 +16,11 @@ book:
     previous: book/cs/v2/Git-a-ostatní-systémy-Shrnutí
     next: book/cs/v2/Git-Internals-Git-Objects
 title: Git - Plumbing and Porcelain
+aliases:
+- "/book/cs/Git-pod-pokličkou.html"
+- "/book/cs/v1/Git-pod-pokličkou.html"
+- "/book/cs/Git-pod-pokličkou-Nízkoúrovňové-a-vysokoúrovňové-příkazy.html"
+- "/book/cs/v1/Git-pod-pokličkou-Nízkoúrovňové-a-vysokoúrovňové-příkazy.html"
 ---
 <p>You may have skipped to this chapter from a previous chapter, or you may have gotten here after reading the rest of the book – in either case, this is where we’ll go over the inner workings and implementation of Git.
 We found that learning this information was fundamentally important to understanding how useful and powerful Git is, but others have argued to us that it can be confusing and unnecessarily complex for beginners.
