--- a/external/book/content/book/cs/v2/Git-Internals-Přenosové-protokoly.html
+++ b/external/book/content/book/cs/v2/Git-Internals-Přenosové-protokoly.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Git-Internals-Správa-a-obnova-dat
 title: Git - Přenosové protokoly
 url: "/book/cs/v2/Git-Internals-Přenosové-protokoly.html"
+aliases:
+- "/book/cs/Git-pod-pokličkou-Přenosové-protokoly.html"
+- "/book/cs/v1/Git-pod-pokličkou-Přenosové-protokoly.html"
 ---
 <h2 id="_přenosové_protokoly">Přenosové protokoly</h2>
 <div class="paragraph">
