--- a/external/book/content/book/cs/v2/Git-Internals-Správa-a-obnova-dat.html
+++ b/external/book/content/book/cs/v2/Git-Internals-Správa-a-obnova-dat.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Git-Internals-Environment-Variables
 title: Git - Správa a obnova dat
 url: "/book/cs/v2/Git-Internals-Správa-a-obnova-dat.html"
+aliases:
+- "/book/cs/Git-pod-pokličkou-Správa-a-obnova-dat.html"
+- "/book/cs/v1/Git-pod-pokličkou-Správa-a-obnova-dat.html"
 ---
 <h2 id="_správa_a_obnova_dat">Správa a obnova dat</h2>
 <div class="paragraph">
