--- a/external/book/content/book/cs/v2/Git-Internals-The-Refspec.html
+++ b/external/book/content/book/cs/v2/Git-Internals-The-Refspec.html
@@ -16,6 +16,9 @@ book:
     previous: book/cs/v2/Git-Internals-Balíčkové-soubory
     next: book/cs/v2/Git-Internals-Přenosové-protokoly
 title: Git - The Refspec
+aliases:
+- "/book/cs/Git-pod-pokličkou-Refspec.html"
+- "/book/cs/v1/Git-pod-pokličkou-Refspec.html"
 ---
 <h2 id="_refspec">The Refspec</h2>
 <div class="paragraph">
