--- a/external/book/content/book/cs/v2/Git-Tools-Advanced-Merging.html
+++ b/external/book/content/book/cs/v2/Git-Tools-Advanced-Merging.html
@@ -16,6 +16,9 @@ book:
     previous: book/cs/v2/Git-Tools-Reset-Demystified
     next: book/cs/v2/Git-Tools-Rerere
 title: Git - Advanced Merging
+aliases:
+- "/book/cs/Nástroje-systému-Git-Začlenění-podstromu.html"
+- "/book/cs/v1/Nástroje-systému-Git-Začlenění-podstromu.html"
 ---
 <h2 id="_advanced_merging">Advanced Merging</h2>
 <div class="paragraph">
