--- a/external/book/content/book/cs/v2/Git-Tools-Interactive-Staging.html
+++ b/external/book/content/book/cs/v2/Git-Tools-Interactive-Staging.html
@@ -16,6 +16,9 @@ book:
     previous: book/cs/v2/Git-Tools-Revision-Selection
     next: book/cs/v2/Git-Tools-Stashing-and-Cleaning
 title: Git - Interactive Staging
+aliases:
+- "/book/cs/Nástroje-systému-Git-Interaktivní-příprava-k-zapsání.html"
+- "/book/cs/v1/Nástroje-systému-Git-Interaktivní-příprava-k-zapsání.html"
 ---
 <h2 id="_interactive_staging">Interactive Staging</h2>
 <div class="paragraph">
