--- a/external/book/content/book/cs/v2/Git-Tools-Ladění-v-systému-Git.html
+++ b/external/book/content/book/cs/v2/Git-Tools-Ladění-v-systému-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Git-Tools-Submodules
 title: Git - Ladění v systému Git
 url: "/book/cs/v2/Git-Tools-Ladění-v-systému-Git.html"
+aliases:
+- "/book/cs/Nástroje-systému-Git-Ladění-v-systému-Git.html"
+- "/book/cs/v1/Nástroje-systému-Git-Ladění-v-systému-Git.html"
 ---
 <h2 id="_ladění_v_systému_git">Ladění v systému Git</h2>
 <div class="paragraph">
