--- a/external/book/content/book/cs/v2/Git-Tools-Revision-Selection.html
+++ b/external/book/content/book/cs/v2/Git-Tools-Revision-Selection.html
@@ -16,6 +16,11 @@ book:
     previous: book/cs/v2/GitHub-Shrnutí
     next: book/cs/v2/Git-Tools-Interactive-Staging
 title: Git - Revision Selection
+aliases:
+- "/book/cs/Nástroje-systému-Git.html"
+- "/book/cs/v1/Nástroje-systému-Git.html"
+- "/book/cs/Nástroje-systému-Git-Výběr-revize.html"
+- "/book/cs/v1/Nástroje-systému-Git-Výběr-revize.html"
 ---
 <p>Do této chvíle jste stačili poznat většinu každodenních příkazů a pracovních postupů, které budete při práci se zdrojovým kódem potřebovat k ovládání a správě repozitáře Git.
 Zvládli jste základní úkony sledování a zapisování souborů a pochopili jste přednosti přípravy souborů k zapsání i snadného vytváření a začleňování větví.</p><p>Nyní poznáte několik velmi účinných nástrojů, které vám Git nabízí. Pravděpodobně je nebudete používat každý den, ale přesto se vám mohou čas od času hodit.</p>
