--- a/external/book/content/book/cs/v2/Git-Tools-Rewriting-History.html
+++ b/external/book/content/book/cs/v2/Git-Tools-Rewriting-History.html
@@ -16,6 +16,9 @@ book:
     previous: book/cs/v2/Git-Tools-Searching
     next: book/cs/v2/Git-Tools-Reset-Demystified
 title: Git - Rewriting History
+aliases:
+- "/book/cs/Nástroje-systému-Git-Přepis-historie.html"
+- "/book/cs/v1/Nástroje-systému-Git-Přepis-historie.html"
 ---
 <h2 id="_rewriting_history">Rewriting History</h2>
 <div class="paragraph">
