--- a/external/book/content/book/cs/v2/Git-Tools-Shrnutí.html
+++ b/external/book/content/book/cs/v2/Git-Tools-Shrnutí.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Customizing-Git-Git-Configuration
 title: Git - Shrnutí
 url: "/book/cs/v2/Git-Tools-Shrnutí.html"
+aliases:
+- "/book/cs/Nástroje-systému-Git-Shrnutí.html"
+- "/book/cs/v1/Nástroje-systému-Git-Shrnutí.html"
 ---
 <h2 id="_shrnutí_9">Shrnutí</h2>
 <div class="paragraph">
