--- a/external/book/content/book/cs/v2/Git-Tools-Stashing-and-Cleaning.html
+++ b/external/book/content/book/cs/v2/Git-Tools-Stashing-and-Cleaning.html
@@ -16,6 +16,9 @@ book:
     previous: book/cs/v2/Git-Tools-Interactive-Staging
     next: book/cs/v2/Git-Tools-Signing-Your-Work
 title: Git - Stashing and Cleaning
+aliases:
+- "/book/cs/Nástroje-systému-Git-Odložení.html"
+- "/book/cs/v1/Nástroje-systému-Git-Odložení.html"
 ---
 <h2 id="_git_stashing">Stashing and Cleaning</h2>
 <div class="paragraph">
