--- a/external/book/content/book/cs/v2/Git-Tools-Submodules.html
+++ b/external/book/content/book/cs/v2/Git-Tools-Submodules.html
@@ -16,6 +16,9 @@ book:
     previous: book/cs/v2/Git-Tools-Ladění-v-systému-Git
     next: book/cs/v2/Git-Tools-Bundling
 title: Git - Submodules
+aliases:
+- "/book/cs/Nástroje-systému-Git-Submoduly.html"
+- "/book/cs/v1/Nástroje-systému-Git-Submoduly.html"
 ---
 <h2 id="_git_submodules">Submodules</h2>
 <div class="paragraph">
