--- a/external/book/content/book/cs/v2/Git-a-ostatní-systémy-Git-as-a-Client.html
+++ b/external/book/content/book/cs/v2/Git-a-ostatní-systémy-Git-as-a-Client.html
@@ -17,6 +17,11 @@ book:
     next: book/cs/v2/Git-a-ostatní-systémy-Migrating-to-Git
 title: Git - Git as a Client
 url: "/book/cs/v2/Git-a-ostatní-systémy-Git-as-a-Client.html"
+aliases:
+- "/book/cs/Git-a-ostatní-systémy.html"
+- "/book/cs/v1/Git-a-ostatní-systémy.html"
+- "/book/cs/Git-a-ostatní-systémy-Git-a-Subversion.html"
+- "/book/cs/v1/Git-a-ostatní-systémy-Git-a-Subversion.html"
 ---
 <p>The world isn’t perfect.
 Usually, you can’t immediately switch every project you come in contact with to Git.
