--- a/external/book/content/book/cs/v2/Git-a-ostatní-systémy-Migrating-to-Git.html
+++ b/external/book/content/book/cs/v2/Git-a-ostatní-systémy-Migrating-to-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Git-a-ostatní-systémy-Shrnutí
 title: Git - Migrating to Git
 url: "/book/cs/v2/Git-a-ostatní-systémy-Migrating-to-Git.html"
+aliases:
+- "/book/cs/Git-a-ostatní-systémy-Přechod-na-systém-Git.html"
+- "/book/cs/v1/Git-a-ostatní-systémy-Přechod-na-systém-Git.html"
 ---
 <h2 id="_migrating">Migrating to Git</h2>
 <div class="paragraph">
