--- a/external/book/content/book/cs/v2/Git-na-serveru-Démon-Git.html
+++ b/external/book/content/book/cs/v2/Git-na-serveru-Démon-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Git-na-serveru-Chytrý-HTTP
 title: Git - Démon Git
 url: "/book/cs/v2/Git-na-serveru-Démon-Git.html"
+aliases:
+- "/book/cs/Git-na-serveru-Démon-Git.html"
+- "/book/cs/v1/Git-na-serveru-Démon-Git.html"
 ---
 <h2 id="_démon_git">Démon Git</h2>
 <div class="paragraph">
