--- a/external/book/content/book/cs/v2/Git-na-serveru-Generování-veřejného-klíče-SSH.html
+++ b/external/book/content/book/cs/v2/Git-na-serveru-Generování-veřejného-klíče-SSH.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Git-na-serveru-Nastavení-serveru
 title: Git - Generování veřejného klíče SSH
 url: "/book/cs/v2/Git-na-serveru-Generování-veřejného-klíče-SSH.html"
+aliases:
+- "/book/cs/Git-na-serveru-Vygenerování-veřejného-SSH-klíče.html"
+- "/book/cs/v1/Git-na-serveru-Vygenerování-veřejného-SSH-klíče.html"
 ---
 <h2 id="_generate_ssh_key">Generování veřejného klíče SSH</h2>
 <div class="paragraph">
