--- a/external/book/content/book/cs/v2/Git-na-serveru-Možnosti-hostování-u-třetí-strany.html
+++ b/external/book/content/book/cs/v2/Git-na-serveru-Možnosti-hostování-u-třetí-strany.html
@@ -17,6 +17,17 @@ book:
     next: book/cs/v2/Git-na-serveru-Shrnutí
 title: Git - Možnosti hostování u třetí strany
 url: "/book/cs/v2/Git-na-serveru-Možnosti-hostování-u-třetí-strany.html"
+aliases:
+- "/book/cs/Git-na-serveru-Veřejný-přístup.html"
+- "/book/cs/v1/Git-na-serveru-Veřejný-přístup.html"
+- "/book/cs/Git-na-serveru-GitWeb.html"
+- "/book/cs/v1/Git-na-serveru-GitWeb.html"
+- "/book/cs/Git-na-serveru-Gitosis.html"
+- "/book/cs/v1/Git-na-serveru-Gitosis.html"
+- "/book/cs/Git-na-serveru-Gitolite.html"
+- "/book/cs/v1/Git-na-serveru-Gitolite.html"
+- "/book/cs/Git-na-serveru-Hostování-projektů-Git.html"
+- "/book/cs/v1/Git-na-serveru-Hostování-projektů-Git.html"
 ---
 <h2 id="_možnosti_hostování_u_třetí_strany">Možnosti hostování u třetí strany</h2>
 <div class="paragraph">
