--- a/external/book/content/book/cs/v2/Git-na-serveru-Nastavení-serveru.html
+++ b/external/book/content/book/cs/v2/Git-na-serveru-Nastavení-serveru.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Git-na-serveru-Démon-Git
 title: Git - Nastavení serveru
 url: "/book/cs/v2/Git-na-serveru-Nastavení-serveru.html"
+aliases:
+- "/book/cs/Git-na-serveru-Nastavení-serveru.html"
+- "/book/cs/v1/Git-na-serveru-Nastavení-serveru.html"
 ---
 <h2 id="_setting_up_server">Nastavení serveru</h2>
 <div class="paragraph">
