--- a/external/book/content/book/cs/v2/Git-na-serveru-Protokoly.html
+++ b/external/book/content/book/cs/v2/Git-na-serveru-Protokoly.html
@@ -16,6 +16,11 @@ book:
     previous: book/cs/v2/Větve-v-systému-Git-Shrnutí
     next: book/cs/v2/Git-na-serveru-Zprovoznění-Gitu-na-serveru
 title: Git - Protokoly
+aliases:
+- "/book/cs/Git-na-serveru.html"
+- "/book/cs/v1/Git-na-serveru.html"
+- "/book/cs/Git-na-serveru-Protokoly.html"
+- "/book/cs/v1/Git-na-serveru-Protokoly.html"
 ---
 <p>
 V tomto okamžiku už byste měli zvládat většinu každodenních úkonů, pro které budete Git používat.
