--- a/external/book/content/book/cs/v2/Git-na-serveru-Shrnutí.html
+++ b/external/book/content/book/cs/v2/Git-na-serveru-Shrnutí.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Distribuovaný-Git-Distribuované-pracovní-postupy
 title: Git - Shrnutí
 url: "/book/cs/v2/Git-na-serveru-Shrnutí.html"
+aliases:
+- "/book/cs/Git-na-serveru-Shrnutí.html"
+- "/book/cs/v1/Git-na-serveru-Shrnutí.html"
 ---
 <h2 id="_shrnutí_4">Shrnutí</h2>
 <div class="paragraph">
