--- a/external/book/content/book/cs/v2/Git-na-serveru-Zprovoznění-Gitu-na-serveru.html
+++ b/external/book/content/book/cs/v2/Git-na-serveru-Zprovoznění-Gitu-na-serveru.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Git-na-serveru-Generování-veřejného-klíče-SSH
 title: Git - Zprovoznění Gitu na serveru
 url: "/book/cs/v2/Git-na-serveru-Zprovoznění-Gitu-na-serveru.html"
+aliases:
+- "/book/cs/Git-na-serveru-Jak-umístit-Git-na-server.html"
+- "/book/cs/v1/Git-na-serveru-Jak-umístit-Git-na-server.html"
 ---
 <h2 id="_git_on_the_server">Zprovoznění Gitu na serveru</h2>
 <div class="paragraph">
