--- a/external/book/content/book/cs/v2/Větve-v-systému-Git-Postupy-při-práci-s-větvemi.html
+++ b/external/book/content/book/cs/v2/Větve-v-systému-Git-Postupy-při-práci-s-větvemi.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Větve-v-systému-Git-Vzdálené-větve
 title: Git - Postupy při práci s větvemi
 url: "/book/cs/v2/Větve-v-systému-Git-Postupy-při-práci-s-větvemi.html"
+aliases:
+- "/book/cs/Větve-v-systému-Git-Možnosti-při-práci-s-větvemi.html"
+- "/book/cs/v1/Větve-v-systému-Git-Možnosti-při-práci-s-větvemi.html"
 ---
 <h2 id="_postupy_při_práci_s_větvemi">Postupy při práci s větvemi</h2>
 <div class="paragraph">
