--- a/external/book/content/book/cs/v2/Větve-v-systému-Git-Přeskládání.html
+++ b/external/book/content/book/cs/v2/Větve-v-systému-Git-Přeskládání.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Větve-v-systému-Git-Shrnutí
 title: Git - Přeskládání
 url: "/book/cs/v2/Větve-v-systému-Git-Přeskládání.html"
+aliases:
+- "/book/cs/Větve-v-systému-Git-Přeskládání.html"
+- "/book/cs/v1/Větve-v-systému-Git-Přeskládání.html"
 ---
 <h2 id="_rebasing">Přeskládání</h2>
 <div class="paragraph">
