--- a/external/book/content/book/cs/v2/Větve-v-systému-Git-Shrnutí.html
+++ b/external/book/content/book/cs/v2/Větve-v-systému-Git-Shrnutí.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Git-na-serveru-Protokoly
 title: Git - Shrnutí
 url: "/book/cs/v2/Větve-v-systému-Git-Shrnutí.html"
+aliases:
+- "/book/cs/Větve-v-systému-Git-Shrnutí.html"
+- "/book/cs/v1/Větve-v-systému-Git-Shrnutí.html"
 ---
 <h2 id="_shrnutí_3">Shrnutí</h2>
 <div class="paragraph">
