--- a/external/book/content/book/cs/v2/Větve-v-systému-Git-Správa-větví.html
+++ b/external/book/content/book/cs/v2/Větve-v-systému-Git-Správa-větví.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Větve-v-systému-Git-Postupy-při-práci-s-větvemi
 title: Git - Správa větví
 url: "/book/cs/v2/Větve-v-systému-Git-Správa-větví.html"
+aliases:
+- "/book/cs/Větve-v-systému-Git-Správa-větví.html"
+- "/book/cs/v1/Větve-v-systému-Git-Správa-větví.html"
 ---
 <h2 id="_branch_management">Správa větví</h2>
 <div class="paragraph">
