--- a/external/book/content/book/cs/v2/Větve-v-systému-Git-Vzdálené-větve.html
+++ b/external/book/content/book/cs/v2/Větve-v-systému-Git-Vzdálené-větve.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Větve-v-systému-Git-Přeskládání
 title: Git - Vzdálené větve
 url: "/book/cs/v2/Větve-v-systému-Git-Vzdálené-větve.html"
+aliases:
+- "/book/cs/Větve-v-systému-Git-Vzdálené-větve.html"
+- "/book/cs/v1/Větve-v-systému-Git-Vzdálené-větve.html"
 ---
 <h2 id="_remote_branches">Vzdálené větve</h2>
 <div class="paragraph">
