--- a/external/book/content/book/cs/v2/Větve-v-systému-Git-Větve-v-kostce.html
+++ b/external/book/content/book/cs/v2/Větve-v-systému-Git-Větve-v-kostce.html
@@ -17,6 +17,11 @@ book:
     next: book/cs/v2/Větve-v-systému-Git-Základy-větvení-a-slučování
 title: Git - Větve v kostce
 url: "/book/cs/v2/Větve-v-systému-Git-Větve-v-kostce.html"
+aliases:
+- "/book/cs/Větve-v-systému-Git.html"
+- "/book/cs/v1/Větve-v-systému-Git.html"
+- "/book/cs/Větve-v-systému-Git-Co-je-to-větev.html"
+- "/book/cs/v1/Větve-v-systému-Git-Co-je-to-větev.html"
 ---
 <p>
 Nějakou formu větvení podporují téměř všechny systémy pro správu verzí.
