--- a/external/book/content/book/cs/v2/Větve-v-systému-Git-Základy-větvení-a-slučování.html
+++ b/external/book/content/book/cs/v2/Větve-v-systému-Git-Základy-větvení-a-slučování.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Větve-v-systému-Git-Správa-větví
 title: Git - Základy větvení a slučování
 url: "/book/cs/v2/Větve-v-systému-Git-Základy-větvení-a-slučování.html"
+aliases:
+- "/book/cs/Větve-v-systému-Git-Základy-větvení-a-slučování.html"
+- "/book/cs/v1/Větve-v-systému-Git-Základy-větvení-a-slučování.html"
 ---
 <h2 id="_základy_větvení_a_slučování">Základy větvení a slučování</h2>
 <div class="paragraph">
