--- a/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Aliasy-v-Gitu.html
+++ b/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Aliasy-v-Gitu.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Základy-práce-se-systémem-Git-Shrnutí
 title: Git - Aliasy v Gitu
 url: "/book/cs/v2/Základy-práce-se-systémem-Git-Aliasy-v-Gitu.html"
+aliases:
+- "/book/cs/Základy-práce-se-systémem-Git-Tipy-a-triky.html"
+- "/book/cs/v1/Základy-práce-se-systémem-Git-Tipy-a-triky.html"
 ---
 <h2 id="_git_aliases">Aliasy v Gitu</h2>
 <div class="paragraph">
