--- a/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Nahrávání-změn-do-repozitáře.html
+++ b/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Nahrávání-změn-do-repozitáře.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Základy-práce-se-systémem-Git-Zobrazení-historie-revizí
 title: Git - Nahrávání změn do repozitáře
 url: "/book/cs/v2/Základy-práce-se-systémem-Git-Nahrávání-změn-do-repozitáře.html"
+aliases:
+- "/book/cs/Základy-práce-se-systémem-Git-Nahrávání-změn-do-repozitáře.html"
+- "/book/cs/v1/Základy-práce-se-systémem-Git-Nahrávání-změn-do-repozitáře.html"
 ---
 <h2 id="_nahrávání_změn_do_repozitáře">Nahrávání změn do repozitáře</h2>
 <div class="paragraph">
