--- a/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Návrat-do-předchozího-stavu.html
+++ b/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Návrat-do-předchozího-stavu.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Základy-práce-se-systémem-Git-Práce-se-vzdálenými-repozitáři
 title: Git - Návrat do předchozího stavu
 url: "/book/cs/v2/Základy-práce-se-systémem-Git-Návrat-do-předchozího-stavu.html"
+aliases:
+- "/book/cs/Základy-práce-se-systémem-Git-Rušení-změn.html"
+- "/book/cs/v1/Základy-práce-se-systémem-Git-Rušení-změn.html"
 ---
 <h2 id="_undoing">Návrat do předchozího stavu</h2>
 <div class="paragraph">
