--- a/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Používání-značek.html
+++ b/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Používání-značek.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Základy-práce-se-systémem-Git-Aliasy-v-Gitu
 title: Git - Používání značek
 url: "/book/cs/v2/Základy-práce-se-systémem-Git-Používání-značek.html"
+aliases:
+- "/book/cs/Základy-práce-se-systémem-Git-Značky.html"
+- "/book/cs/v1/Základy-práce-se-systémem-Git-Značky.html"
 ---
 <h2 id="_git_tagging">Používání značek</h2>
 <div class="paragraph">
