--- a/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Práce-se-vzdálenými-repozitáři.html
+++ b/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Práce-se-vzdálenými-repozitáři.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Základy-práce-se-systémem-Git-Používání-značek
 title: Git - Práce se vzdálenými repozitáři
 url: "/book/cs/v2/Základy-práce-se-systémem-Git-Práce-se-vzdálenými-repozitáři.html"
+aliases:
+- "/book/cs/Základy-práce-se-systémem-Git-Práce-se-vzdálenými-repozitáři.html"
+- "/book/cs/v1/Základy-práce-se-systémem-Git-Práce-se-vzdálenými-repozitáři.html"
 ---
 <h2 id="_remote_repos">Práce se vzdálenými repozitáři</h2>
 <div class="paragraph">
