--- a/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Shrnutí.html
+++ b/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Shrnutí.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Větve-v-systému-Git-Větve-v-kostce
 title: Git - Shrnutí
 url: "/book/cs/v2/Základy-práce-se-systémem-Git-Shrnutí.html"
+aliases:
+- "/book/cs/Základy-práce-se-systémem-Git-Shrnutí.html"
+- "/book/cs/v1/Základy-práce-se-systémem-Git-Shrnutí.html"
 ---
 <h2 id="_shrnutí_2">Shrnutí</h2>
 <div class="paragraph">
