--- a/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Zobrazení-historie-revizí.html
+++ b/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Zobrazení-historie-revizí.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Základy-práce-se-systémem-Git-Návrat-do-předchozího-stavu
 title: Git - Zobrazení historie revizí
 url: "/book/cs/v2/Základy-práce-se-systémem-Git-Zobrazení-historie-revizí.html"
+aliases:
+- "/book/cs/Základy-práce-se-systémem-Git-Zobrazení-historie-revizí.html"
+- "/book/cs/v1/Základy-práce-se-systémem-Git-Zobrazení-historie-revizí.html"
 ---
 <h2 id="_viewing_history">Zobrazení historie revizí</h2>
 <div class="paragraph">
