--- a/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Získání-repozitáře-Git.html
+++ b/external/book/content/book/cs/v2/Základy-práce-se-systémem-Git-Získání-repozitáře-Git.html
@@ -17,6 +17,11 @@ book:
     next: book/cs/v2/Základy-práce-se-systémem-Git-Nahrávání-změn-do-repozitáře
 title: Git - Získání repozitáře Git
 url: "/book/cs/v2/Základy-práce-se-systémem-Git-Získání-repozitáře-Git.html"
+aliases:
+- "/book/cs/Základy-práce-se-systémem-Git.html"
+- "/book/cs/v1/Základy-práce-se-systémem-Git.html"
+- "/book/cs/Základy-práce-se-systémem-Git-Získání-repozitáře-Git.html"
+- "/book/cs/v1/Základy-práce-se-systémem-Git-Získání-repozitáře-Git.html"
 ---
 <p>Pokud byste si o Gitu měli přečíst jen jednu kapitolu, měla by to být právě tahle.
 Tato kapitola popisuje všechny základní příkazy, které potřebujete pro drtivou většinu věcí, jejichž prováděním budete v Gitu trávit svůj čas.
