--- a/external/book/content/book/cs/v2/_index.html
+++ b/external/book/content/book/cs/v2/_index.html
@@ -13,5 +13,6 @@ page_title: Git - Book
 url: "/book/cs/v2.html"
 aliases:
 - "/book/cs/v2/index.html"
+- "/book/cs/v1/index.html"
 - "/book/cs/index.html"
 ---
