--- a/external/book/content/book/cs/v2/Úvod-Instalace-systému-Git.html
+++ b/external/book/content/book/cs/v2/Úvod-Instalace-systému-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Úvod-První-nastavení-systému-Git
 title: Git - Instalace systému Git
 url: "/book/cs/v2/Úvod-Instalace-systému-Git.html"
+aliases:
+- "/book/cs/Úvod-Instalace-systému-Git.html"
+- "/book/cs/v1/Úvod-Instalace-systému-Git.html"
 ---
 <h2 id="_instalace_systému_git">Instalace systému Git</h2>
 <div class="paragraph">
