--- a/external/book/content/book/cs/v2/Úvod-První-nastavení-systému-Git.html
+++ b/external/book/content/book/cs/v2/Úvod-První-nastavení-systému-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Úvod-Získání-nápovědy
 title: Git - První nastavení systému Git
 url: "/book/cs/v2/Úvod-První-nastavení-systému-Git.html"
+aliases:
+- "/book/cs/Úvod-První-nastavení-systému-Git.html"
+- "/book/cs/v1/Úvod-První-nastavení-systému-Git.html"
 ---
 <h2 id="_first_time">První nastavení systému Git</h2>
 <div class="paragraph">
