--- a/external/book/content/book/cs/v2/Úvod-Shrnutí.html
+++ b/external/book/content/book/cs/v2/Úvod-Shrnutí.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Základy-práce-se-systémem-Git-Získání-repozitáře-Git
 title: Git - Shrnutí
 url: "/book/cs/v2/Úvod-Shrnutí.html"
+aliases:
+- "/book/cs/Úvod-Shrnutí.html"
+- "/book/cs/v1/Úvod-Shrnutí.html"
 ---
 <h2 id="_shrnutí">Shrnutí</h2>
 <div class="paragraph">
