--- a/external/book/content/book/cs/v2/Úvod-Správa-verzí.html
+++ b/external/book/content/book/cs/v2/Úvod-Správa-verzí.html
@@ -17,6 +17,11 @@ book:
     next: book/cs/v2/Úvod-Stručná-historie-systému-Git
 title: Git - Správa verzí
 url: "/book/cs/v2/Úvod-Správa-verzí.html"
+aliases:
+- "/book/cs/Úvod.html"
+- "/book/cs/v1/Úvod.html"
+- "/book/cs/Úvod-Správa-verzí.html"
+- "/book/cs/v1/Úvod-Správa-verzí.html"
 ---
 <p>Tato kapitola pojednává o tom, jak se systémem Git začít.
 Nejdříve si vysvětlíme něco o původu nástrojů pro správu verzí, poté se budeme věnovat tomu, jak spustit systém Git ve vašem počítači, a nakonec se podíváme na to, co musíme nastavit, abychom s ním mohli začít pracovat.
