--- a/external/book/content/book/cs/v2/Úvod-Získání-nápovědy.html
+++ b/external/book/content/book/cs/v2/Úvod-Získání-nápovědy.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Úvod-Shrnutí
 title: Git - Získání nápovědy
 url: "/book/cs/v2/Úvod-Získání-nápovědy.html"
+aliases:
+- "/book/cs/Úvod-Kde-hledat-pomoc.html"
+- "/book/cs/v1/Úvod-Kde-hledat-pomoc.html"
 ---
 <h2 id="_git_help">Získání nápovědy</h2>
 <div class="paragraph">
