--- a/external/book/content/book/cs/v2/Git-Internals-Shrnutí.html
+++ b/external/book/content/book/cs/v2/Git-Internals-Shrnutí.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Appendix-A:-Git-in-Other-Environments-Graphical-Interfaces
 title: Git - Shrnutí
 url: "/book/cs/v2/Git-Internals-Shrnutí.html"
+aliases:
+- "/book/cs/Git-pod-pokličkou-Shrnutí.html"
+- "/book/cs/v1/Git-pod-pokličkou-Shrnutí.html"
 ---
 <h2 id="_shrnutí_12">Shrnutí</h2>
 <div class="paragraph">
