--- a/external/book/content/book/cs/v2/Git-a-ostatní-systémy-Shrnutí.html
+++ b/external/book/content/book/cs/v2/Git-a-ostatní-systémy-Shrnutí.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Git-Internals-Plumbing-and-Porcelain
 title: Git - Shrnutí
 url: "/book/cs/v2/Git-a-ostatní-systémy-Shrnutí.html"
+aliases:
+- "/book/cs/Git-a-ostatní-systémy-Shrnutí.html"
+- "/book/cs/v1/Git-a-ostatní-systémy-Shrnutí.html"
 ---
 <h2 id="_shrnutí_11">Shrnutí</h2>
 <div class="paragraph">
