--- a/external/book/content/book/cs/v2/Úvod-Stručná-historie-systému-Git.html
+++ b/external/book/content/book/cs/v2/Úvod-Stručná-historie-systému-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Úvod-Základy-systému-Git
 title: Git - Stručná historie systému Git
 url: "/book/cs/v2/Úvod-Stručná-historie-systému-Git.html"
+aliases:
+- "/book/cs/Úvod-Stručná-historie-systému-Git.html"
+- "/book/cs/v1/Úvod-Stručná-historie-systému-Git.html"
 ---
 <h2 id="_stručná_historie_systému_git">Stručná historie systému Git</h2>
 <div class="paragraph">
