--- a/external/book/content/book/cs/v2/Úvod-Základy-systému-Git.html
+++ b/external/book/content/book/cs/v2/Úvod-Základy-systému-Git.html
@@ -17,6 +17,9 @@ book:
     next: book/cs/v2/Úvod-Příkazový-řádek
 title: Git - Základy systému Git
 url: "/book/cs/v2/Úvod-Základy-systému-Git.html"
+aliases:
+- "/book/cs/Úvod-Základy-systému-Git.html"
+- "/book/cs/v1/Úvod-Základy-systému-Git.html"
 ---
 <h2 id="_základy_systému_git">Základy systému Git</h2>
 <div class="paragraph">
